fix dropdown-menu z-index too low

--- a/assets/less/overwrite.less
+++ b/assets/less/overwrite.less
@@ -69,7 +69,7 @@ legend + .control-group{
 	margin-top:0px;
 }
 
-.typeahead{
+.typeahead, .dropdown-menu{
 	z-index:9999999;
 }
 
